--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.12.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.7",
